# 5c

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  tasks.c  tasks.h  tests.c  tests.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/unordered_array_set/: unordered_array_set.h  unsorted_array_set.c
libs/data_structures/vectors/: vector.c  vector.h
